# backpropagation

./: main.py  pyproject.toml  requirements.txt
lib/nn/: function.py  network.py
src/backpropagation/: __main__.py  function.py  network.py
